<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".AddProfile">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_desc"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/person"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/choose_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/username"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textOfGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp"
                android:text="@string/gender_title"
                android:fontFamily="sans-serif-condensed-medium"
                app:layout_constraintTop_toBottomOf="@+id/verifyPasswordField"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/male"
                    android:checked="true"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/radio_button_female"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/female"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/userTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/user_type_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/movies_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:checked="true"
                android:padding="20dp"
                android:text="@string/movies"
                android:textColor="@color/black"
                android:thumbTint="@color/navy_blue"
                android:trackTint="@color/black"/>

            <Switch
                android:id="@+id/music_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:padding="20dp"
                android:text="@string/music"
                android:textColor="@color/black"
                android:thumbTint="@color/navy_blue"
                android:trackTint="@color/black"/>

            <TextView
                android:id="@+id/spinnerTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/spinner_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/states"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:entries="@array/states"
                android:padding="20dp" />

            <CheckBox
                android:id="@+id/tAndC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/terms"
                android:textColor="@color/black"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:clickable="false"
        android:text="@string/submit"
        app:icon="@drawable/check" />

</LinearLayout>