<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".MusicFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo_desc"/>

            <TextView
                android:id="@+id/music_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vinasans"
                android:gravity="center"
                android:text="@string/music_player"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/oppenheimer" />

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:backgroundTint="@color/purple"
                    android:contentDescription="@string/previous"
                    android:src="@drawable/previous_icon" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:backgroundTint="@color/purple"
                    android:contentDescription="@string/play"
                    android:src="@drawable/play_icon" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:backgroundTint="@color/purple"
                    android:contentDescription="@string/pause"
                    android:src="@drawable/stop_icon" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:backgroundTint="@color/purple"
                    android:contentDescription="@string/next"
                    android:src="@drawable/next_icon" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>