<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".Landing">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/logo" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:lineSpacingExtra="8dp"
                android:padding="16dp"
                android:text="@string/welcome_screen_text"
                android:textColor="@color/yellow"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/vinasans"
                android:gravity="center"
                android:lineSpacingExtra="20dp"
                android:padding="16dp"
                android:text="@string/app_title"
                android:textColor="@color/navy_blue"
                android:textSize="40sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/subtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_subtext"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="10dp"
                android:padding="16dp"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                app:icon="@drawable/login_tick"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>